Fix Movie Edit not showing changes

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,5 @@
 .header {
   display: flex;
-  gap: 1rem;
   padding: 1rem 0;
   justify-content: center;
   background-color: rgb(18, 18, 18);
